# melqui-system

./: compose.yaml  manage.py  prepare-db.sql  pyproject.toml
melqui_system/: asgi.py  settings.py  urls.py  wsgi.py
melqui_system/apps/subscription/: admin.py  apps.py  forms.py  models.py  signals.py  validators.py  views.py
melqui_system/apps/subscription/fixtures/: initial_data.json
melqui_system/apps/subscription/migrations/: 0001_initial.py
melqui_system/apps/subscription/templates/: base.html  subscription.html  thanks.html
